--- a/static/style.css
+++ b/static/style.css
@@ -25,23 +25,18 @@ body {
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
     width: 240px;
     background:#EAEDED;
+    z-index: 1;
 }
-
-
 
 .sidebar .active {
     border-radius: 5px;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
 
-/* .sidebar-sticky {
-    position: relative;
-    top: 0;
-    height: calc(100vh - 48px);
-    padding-top: 0.5rem;
-    overflow-x: hidden;
-    overflow-y: auto;
-} */
+#showSidebar {
+  position: fixed;
+  top: 58px;
+}
 
 #navhover {
     margin: 0;
