--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ body {
     top: 0;
     bottom: 0;
     left: 0;
-    padding: 58px 0 0; /* Height of navbar */
+    padding: 84px 0 0; /* Height of navbar */
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
     width: 240px;
     background:#EAEDED;
@@ -35,7 +35,7 @@ body {
 
 #showSidebar {
   position: fixed;
-  top: 58px;
+  top: 84px;
 }
 
 #navhover {
@@ -102,6 +102,7 @@ body {
 
   main {
     margin-left: 0px;
+    margin-top: 84px;
   }
   
   @media only screen and (min-width: 992px){
